<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentFragment"
    android:background="@drawable/gradient_off_white"
    android:padding="@dimen/standard"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paragraph_1_prayer_content"
            style="@style/text_item_medium"
            android:text="@string/paragraph_1_karakia" />

        <TextView
            android:id="@+id/paragraph_2_prayer_content"
            style="@style/text_item_medium"
            android:text="@string/paragraph_2_karakia" />

        <TextView
            android:id="@+id/paragraph_3_prayer_content"
            style="@style/text_item_medium"
            android:text="@string/paragraph_3_karakia" />

        <TextView
            android:id="@+id/paragraph_4_prayer_content"
            style="@style/text_item_medium"
            android:text="@string/paragraph_4_karakia" />
    </LinearLayout>
</ScrollView>
