<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fourthFragment"
        android:background="@drawable/gradient_off_white"
        android:padding="@dimen/standard"
        android:orientation="vertical">

    <TextView
            android:id="@+id/line_1_hymn_fragment_fourth"
            style="@style/text_item_large"
            android:text="@string/line_1_himene_fourth" />

    <TextView
            android:id="@+id/line_2_hymn_fragment_fourth"
            style="@style/text_item_large"
            android:text="@string/line_2_himene_fourth" />

    <TextView
            android:id="@+id/line_3_hymn_fragment_fourth"
            style="@style/text_item_large"
            android:text="@string/line_3_himene_fourth" />

    <Button
            android:id="@+id/button_himene_fourth"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_start"
            android:textColor="@color/WhiteSmoke"
            android:layout_marginBottom="@dimen/standard_double"
            android:background="@drawable/button_green"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/standard"/>

</LinearLayout>
