<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_about_paragraph_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_paragraph_1"
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/standard" />

    <TextView
        android:id="@+id/activity_about_paragraph_2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="19sp"
        android:text="@string/about_paragraph_2"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/standard_double" />

    <Button
        android:id="@+id/activity_about_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_feedback"
        android:textColor="@color/WhiteSmoke"
        android:layout_marginBottom="@dimen/standard_double"
        android:background="@drawable/button_green"
        android:layout_gravity="center_horizontal" />

    <TextView
            android:id="@+id/activity_about_developers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:text="@string/about_developers"
            android:layout_marginBottom="@dimen/standard_half" />

</LinearLayout>
